--- a/loop.html
+++ b/loop.html
@@ -114,9 +114,6 @@
    }
    convert("фут", 1);
   
-  
-  
-  
   <!-- 6 -->
   document.write(" <br>");
   document.write("task6");
@@ -132,25 +129,20 @@
    }
    document.write("you will earn " + sum + " rubls");
    
-   /*
+   
     <!-- 7 -->
 	document.write("task7");
 	document.write("<br>");
-	function pairs(a,b){
-		if(a > b){
-			document.write(a);
-			document.write("<br>");
+	for (var i = 1; i <= 10; i++) {
+		var f = parseInt (prompt("enter first number"));
+		var s = parseInt (prompt("enter second number"));
+		if (f > s) 	{
+		document.write("pair" + i + ": max number is " + f + "<br>");
 		}
-		else(a > b){
-			document.write(a);
-			document.write("<br>");
+		else {
+		document.write("pair" + i + ": max number is " + s + "<br>");
 		}
 	}
-	pairs(3, 6);
-	for(i=0;i<10;i++){
-		pairs();
-	}
-	*/
 	<!-- 8 -->
 	document.write(" <br>");
 	document.write("task8");
@@ -161,7 +153,29 @@
 			document.write("<br>");
 		}
 	}
-	
+	 <!-- 9 -->
+	document.write(" <br>");
+	document.write("task8");
+	document.write("<br>");
+	for(i=35;i<=87;i++){
+		if(i % 7 == 1 || i % 7 == 2 i % 7 == 5){
+			document.write(i);
+			document.write("<br>");
+		}
+	}
+	<!-- 10 -->
+	document.write(" <br>");
+	document.write("task8");
+	document.write("<br>");
+	var sum = 0;
+	for(i=1;i<=50;i++){
+		if(i % 5 == 0 || i % 7 == 0){
+		sum+=i;
+			document.write(i);
+			document.write("<br>");
+		}
+	}
+	document.write(sum);
 	<!-- 11 -->
 	document.write(" <br>");
 	document.write("task 11");
@@ -172,6 +186,48 @@
 			document.write("<br>");
 		}
 	}
+	 <!-- 12 -->
+	
+	var mult = 1;
+	for (var i = 10; i <= 99; i++) {
+		if (i % 13 == 0) {
+			mult *= i;
+		}
+	}
+	document.write("your result is - " + mult);
+	 <!-- 13 -->
+	var sum = 0;
+	for (var i = 100; i <= 200; i++) {
+		if (i % 17 == 0) {
+		document.write(i + "<br>");
+			sum += i;
+		}
+	}
+	document.write(sum);
+	 <!-- 14 -->
+	var sum = 0;
+	var n = parseInt(prompt("enter your number"));
+	for (var i = 1; i <= n; i++) {
+		sum += i * i;
+	}
+	document.write("sum = " + sum);
+	 <!-- 15 -->
+	<!-- 16 -->
+	<!-- 17 -->
+	<!-- 18 -->
+	<!-- 19 -->
+	<!-- 20 -->
+	<!-- 21 -->
+	<!-- 22 -->
+	<!-- 23 -->
+	<!-- 24 -->
+	<!-- 25 -->
+	<!--26 -->
+	<!-- 27 -->
+	<!-- 28 -->
+	<!-- 29 -->
+	<!-- 30 -->
+	<!-- 31 -->
   </script>
 
   <p>...Конец документа</p>
