--- a/loop.html
+++ b/loop.html
@@ -11,23 +11,23 @@
   <p>Начало документа...</p>
   <script>
   <!-- 1 -->
-  document.write("task1");
+	document.write("task1");
 	document.write("<br>");
-   for(var i = 10; i < 20; i++){
+	for(var i = 10; i < 20; i++){
 	document.write(i*i);
 	document.write(" <br>");
-   }
+	}
 
    
    <!-- 2 -->
-   document.write(" <br>");
-   document.write("task2");
+	document.write(" <br>");
+	document.write("task2");
 	document.write("<br>");
-   var n = parseInt(prompt('enter max number', n));
-   var sum = 0;
-   for(i=1;i<=n;i++){
+	var n = parseInt(prompt('enter max number', n));
+	var sum = 0;
+	for(i=1;i<=n;i++){
 	sum+=i;
-   }
+	}
    document.write(" <br>");
    document.write(sum);
    
@@ -82,47 +82,46 @@
    document.write(" <br>");
    document.write("task5");
    document.write("<br>");
-   function convert(measure, quantity){
+ function convert(measure, quantity){
 	switch (measure) {
-  case "сажень":
+	case "сажень":
 		document.write("you have " + quantity * 2.1366 + " meters");
     break;
-  case "фут":
+	case "фут":
 		document.write("you have " + quantity * 0.3048 + " santimeters");
     break;
 	 case "фунт":
 		document.write("you have " + quantity * 0.4095 + " santimeters");
     break;
-  case "драхма":
+	case "драхма":
 		document.write("you have " + quantity * 3.7325 + " grams");
     break;
 	case "унция":
 		document.write("you have " + quantity * 29.86 + " grams");
     break;
-  case "аршин":
+	case "аршин":
 	document.write("you have " + quantity * 0.7112 + " meters");
     break;
-  case "золотник":
+	case "золотник":
 		document.write("you have " + quantity * 4.2657 + " kilograms");
-    break;
+	break;
 	case "дюйм":
 		document.write("you have " + quantity * 25.3995 + " milimeters");
-    break;
-  default:
-    alert( 'wrong value' );
+	break;
+	fault:
+	alert( 'wrong value' );
+	}
 }
-   }
-   convert("фут", 1);
-  
+	convert("фут", 1);
   <!-- 6 -->
-  document.write(" <br>");
-  document.write("task6");
-  document.write("<br>");
-   var s = 1000;
-   var n = 2;
-   var p = 0.03;
-   var sum = 0;
-   for(i=0;i<n;i++){
+	document.write(" <br>");
+	document.write("task6");
+	document.write("<br>");
+	var s = 1000;
+	var n = 2;
+	var p = 0.03;
+	var sum = 0;
+	for(i=0;i<n;i++){
 	var psum = s * p;
 	sum = sum + psum;
 	s += sum;
@@ -261,11 +260,11 @@
 	var num2;
 	for (var i = 10; i < 100; i++) {
 		for (var j = 10; j < 100; j++){
-			num1 = '' + i + j;								
-			num2 = '' + j + i;								
+			num1 = '' + i + j;
+			num2 = '' + j + i;
 			if ((parseInt(num1) % 99 == 0) && (parseInt(num2) % 49 == 0)){
 				document.write("first number : " + num1 + "<br>" + "second number : " + num2);
-			};			
+			};
 		}
 	}	
 	<!-- 21 -->
@@ -274,14 +273,14 @@
 	var pov;
 	for (var i = 1; i <= n; i++) {
 		pow = ((2 * i) * (2 * i));
-		res += 1 / pow;				
+		res += 1 / pow;
 	}
 	document.write (res);
 	<!-- 22 -->
 	var num = parseInt(prompt("enter natural number"));
 	var res = 0;
 	for (var i = 1; i <= num; i++) {
-		res += 1 / i;				
+		res += 1 / i;
 	}
 	document.write(res);
 	<!-- 23 -->
@@ -293,21 +292,21 @@
 	}	
 	document.write(res);
 	<!-- 24 -->
-	var res = 1;			
+	var res = 1;
 	var sum = 0;
 	for (var i = 1; i <= 10; i++) {
 		for (var j = 1; j <= i; j++) {
-			sum = sum + j;					
+			sum = sum + j;
 		}
 		res = res * sum;
-		sum = 0;				
+		sum = 0;
 	}
 	document.write(res);
 	<!-- 25 -->
 	var a = parseFloat(prompt("enter float number"));
 	var n = parseInt(prompt("enter integer number"));
 	var res = 1;
-	for (var i = 1; i <= n; i++) {				
+	for (var i = 1; i <= n; i++) {
 		res = res * (a + i - 1) ;
 	}
 	document.write(res);
@@ -315,9 +314,9 @@
 	var x = parseFloat(prompt("enter float number"));
 	var n = parseInt(prompt("enter integer number"));
 	var res = 0;
-	for (var i = 1; i <= n; i++) {				
+	for (var i = 1; i <= n; i++) {
 		res += Math.sin(x);
-		x = x * x;								
+		x = x * x;
 	}
 	document.write(res);
 	<!-- 27 -->
@@ -341,41 +340,43 @@
 			break;
 		}
 		credit += credit * 0.2;
-		i++;				
+		i++;
 	}
 	document.write("credit will be passed in " + i + " years");	
 	<!-- 29 -->
-	var i = 0;			
-	while (i <= 100) {				
+	var i = 0;
+	while (i <= 100) {
 		if (i % 2 == 0) {
 			document.write(i + "<br>");
 		}
-		i++;				
+		i++;
 	}
 	<!-- 30 -->
 	var sum = 0;
-var i = 0;			
-while (i < 100) {				
+	var i = 0;
+	while (i < 100) {
 	if (i % 2 !== 0) {
 		sum += i;
 		document.write(i + "<br>");
 	}
-	i++;				
-}
-document.write(sum);
+	i++;
+	}
+	document.write(sum);
 	<!-- 31 -->
-var material = parseInt(prompt("enter length of material"));
-var piece = parseInt(prompt("enter length of piece"));
-var i = 0;
-while (material > 0) {
+	var i = 1;
+	var material = parseInt(prompt("enter length of material"));
+	var piece = parseInt(prompt("enter length of piece"));
+	material = material - piece;
+	while (material > 0) {
+	document.write( i + " piece of material x " + piece + "meters" + "<br>");
 	if (material < piece) {
-		document.write("too little of material for this piece");
+		document.write("too little of material for next piece" + "<br>");
 	}
 	material = material - piece;
 	i++;
-}
-document.write("cutted " + i + " pieces, rest : " + material + "m");
-  </script>
+	}
+	document.write("rest : " + (material + piece) + "m");
+	</script>
 
   <p>...Конец документа</p>
 
