--- a/loop.html
+++ b/loop.html
@@ -8,9 +8,9 @@
 
 <body>
 
-  <h3>Щоб перевірити домашню роботу натисніть клавішу F12, потім в консолі введіть назву функції (task1(), task2() ...php9())</h3>
-  <script>
-  <!-- 1 -->
+<h3>Щоб перевірити домашню роботу натисніть клавішу F12, потім в консолі введіть назву функції (task1(), task2() ...php10())</h3>
+<script>
+<!-- 1 -->
 function task1(){
 	document.write("1. Составьте программу, выводящую на экран квадраты чисел от 10 до 20.");
 	document.write("<br>");
@@ -19,7 +19,7 @@ function task1(){
 	document.write(" <br>");
 	}
 }
-	<!-- 2 -->
+<!-- 2 -->
 function task2(){
 	document.write(" <br>");
 	document.write("2. Составьте программу, которая вычисляет сумму чисел от 1 до n.значение n вводится с клавиатуры.");
@@ -33,7 +33,7 @@ function task2(){
 	document.write(sum);
 } 
 
-	<!-- 3 -->
+<!-- 3 -->
  function task3(){  
 	document.write(" <br>");
 	document.write("3. Составьте программу, составьте программу, которая вычисляет произведение чисел от 1 до n.n вводится с клавиатуры.");
@@ -47,7 +47,7 @@ function task2(){
 	document.write(sum);
 }
 
-	<!-- 4 -->
+<!-- 4 -->
  function task4(){  
 	document.write(" <br>");
 	document.write("4. С клавиатуры вводятся n чисел. Составьте программу, которая определяет кол-во отрицательных, кол-во положительных и кол-во нулей");
@@ -81,7 +81,7 @@ function task2(){
 	document.write("you entered " + zero + " zeros");
 }
 
-   <!-- 5 -->
+<!-- 5 -->
  function task5(){
 	document.write(" <br>");
 	document.write("5. Составьте программы перевода старинных русских мер длины");
@@ -118,7 +118,7 @@ function task2(){
 	}
 }
 
-  <!-- 6 -->
+<!-- 6 -->
 function task6(){
 	document.write(" <br>");
 	document.write("6. В сберкассу на трёхпроцентный вклад положили S рублей.Какой станет сумма вклада через N лет.");
@@ -133,7 +133,7 @@ function task6(){
    document.write("you will earn " + s + " rubls");
 }
 
-    <!-- 7 -->
+<!-- 7 -->
 function task7(){
 	document.write("<br>7. Ввести с клавиатуры 10 пар чисел. сравнить числа в каждой паре и напечатать большие из них.");
 	document.write("<br>");
@@ -149,7 +149,7 @@ function task7(){
 	}
 }
 
-	<!-- 8 -->
+<!-- 8 -->
 function task8(){
 	document.write(" <br>");
 	document.write("8. Даны натуральные числа от 20 до 50.Напечатать те из них, которые делятся на 3, но не делятся на 5");
@@ -162,7 +162,7 @@ function task8(){
 	}
 }
 
-	 <!-- 9 -->
+<!-- 9 -->
 function task9(){
 	document.write(" <br>");
 	document.write("9. даны натуральные числа от 35 до 87. Найти и напечатать те из них, которые при делении на 7 дают остаток 1, 2 или 5");
@@ -175,7 +175,7 @@ function task9(){
 	}
 }
 
-	<!-- 10 -->
+<!-- 10 -->
 function task10(){
 	document.write(" <br>");
 	document.write("10. Даны натуральные числа от 1 до 50. Найти сумму тех из них, которые делятся на 5 или на 7.");
@@ -191,7 +191,7 @@ function task10(){
 	document.write(sum);
 }
 
-	<!-- 11 -->
+<!-- 11 -->
 function task11(){
 	document.write(" <br>");
 	document.write("11. Напечатать те из двузначных чисел которые делятся на 4, но не делятся на 6.");
@@ -204,7 +204,7 @@ function task11(){
 	}
 }
 
-	 <!-- 12 -->
+<!-- 12 -->
 function task12(){
 	document.write(" <br>");
 	document.write("12. Найти произведение двузначных нечетных чисел кратных 13 <br>");
@@ -218,7 +218,7 @@ function task12(){
 	document.write("<br>your result is - " + mult);
 }	
 
-	 <!-- 13 -->
+<!-- 13 -->
 function task13(){
 	document.write(" <br>");
 	document.write("13. Найти сумму чисел от 100 до 200 кратных 17<br>");
@@ -232,7 +232,7 @@ function task13(){
 	document.write("sum : " + sum);
 }
 
-	 <!-- 14 -->
+<!-- 14 -->
 function task14(){
 	document.write(" <br>");
 	document.write("14. Составьте программу, которая вычисляет сумму квадратов чисел от 1 до введенного вами целого числа N <br>");
@@ -256,7 +256,7 @@ function task15(){
 	document.write("power = " + pow);
 }
 
-	<!-- 16 -->
+<!-- 16 -->
 function task16(){
 	document.write(" <br>");
 	document.write("16. В бригаде, работающей на уборке сена, имеется N сенокосилок.Первая сенокосилка работала m часов, а каждая следующая на 10 минут больше, чем предыдущая.Сколько часов проработала вся бригада? <br>");
@@ -271,7 +271,7 @@ function task16(){
 	document.write("common working time is : " + ct + " minutes");
 }
 
-	<!-- 17 -->
+<!-- 17 -->
 function task17(){
 	document.write(" <br>");
 	document.write("17. В ЭВМ вводятся по очереди данные о росте N учащихся класса. Определить средний рост учащихся класса.");
@@ -284,7 +284,7 @@ function task17(){
 	document.write("average height of pupils = " + (sum / pupils));
 }
 
-	<!-- 18 -->
+<!-- 18 -->
 function task18(){
 	document.write(" <br>");
 	document.write("18. Задано натуральное число N. Найти количество натуральных чисел, не превосходящих N и не делящихся ни на одно из чисел 2,3,5 <br>");
@@ -299,7 +299,7 @@ function task18(){
 	document.write("quantity of your numbers are : " + sum);
 }
 
-	<!-- 19 -->
+<!-- 19 -->
 function task19(){
 	document.write(" <br>");
 	document.write("19. Два двузначных числа, записанных одно за другим , образуют четырёхзначное число, которое делится на их произведение. Найти эти числа <br>");
@@ -316,7 +316,7 @@ function task19(){
 	}
 }
 
-	<!-- 20 -->
+<!-- 20 -->
 function task20(){
 	document.write(" <br>");
 	document.write("20. даны два двузначных числа А и В. Из этих чисел составили 2 четырехзначных числа: первое число получили путем написания сначала числа А, затем В.Найти числа А и В если известно , что первое четырехзначное число нацело делится на 99, а второе на 49. <br>");
@@ -333,7 +333,7 @@ function task20(){
 	}
 }
 	
-	<!-- 21 -->
+<!-- 21 -->
 function task21(){
 	document.write(" <br>");
 	document.write("21. Дано натуральное n. вычислить 1/(2 в квадрате) + 1/(4 в квадрате)+ ... + 1/(2n в квадрате) ( в квадрате только n)<br>");
@@ -347,7 +347,7 @@ function task21(){
 	document.write (res);
 }
 
-	<!-- 22 -->
+<!-- 22 -->
 function task22(){
 	document.write(" <br>");
 	document.write("22. дано натуральное n. вычислить: 1 + 1/2 + 1/3 + 1/4 + ... + 1/n.<br>");
@@ -359,7 +359,7 @@ function task22(){
 	document.write(res);
 }
 
-	<!-- 23 -->
+<!-- 23 -->
 function task23(){
 	document.write(" <br>");
 	document.write("23.Вычислить : 1+2+4+8+...+ 2 в 10 степени.<br>");
@@ -372,7 +372,7 @@ function task23(){
 	document.write(res);
 }
 
-	<!-- 24 -->
+<!-- 24 -->
 function task24(){
 	document.write(" <br>");
 	document.write("24. Вычислить: (1+2)*(1+2+3)*...*(1+2+...+10)<br>");
@@ -388,7 +388,7 @@ function task24(){
 	document.write(res);
 }
 
-	<!-- 25 -->
+<!-- 25 -->
 function task25(){
 	document.write(" <br>");
 	document.write("25. Даны действительное (а) и натуральное (n). вычислить: a(a+1)...(a+n-1)<br>");
@@ -401,7 +401,7 @@ function task25(){
 	document.write(res);
 }
 
-	<!--26 -->
+<!--26 -->
 function task26(){
 	document.write(" <br>");
 	document.write("26. даны действительно х и натуральное n. вычислить: sin x + sin x в квадрате + ... sin x в степени n.<br>");
@@ -415,7 +415,7 @@ function task26(){
 	document.write(res);
 }
 
-	<!-- 27 -->document.write(" <br>");
+<!-- 27 -->document.write(" <br>");
 function task27(){
 	document.write(" <br>");
 	document.write("27. У первокласника пети m рублей.Мороженое стоит k рублей.<br>");
@@ -432,7 +432,7 @@ function task27(){
 	document.write("<br>he ate " + i + " icecreams, he has " + money + " rubls");
 }
 	
-	<!-- 28 -->
+<!-- 28 -->
 function task28(){
 	document.write(" <br>");
 	document.write("28. Бизнессмен взял ссуду m тысяч рублей в банке под 20% годовых. через сколько лет его долг превысит s тысяч рублей, если за это время он не будет отдавать долг.");
@@ -449,7 +449,7 @@ function task28(){
 	document.write("<br>limit will be passed in " + i + " years");
 }
 	
-	<!-- 29 -->
+<!-- 29 -->
 function task29(){
 	document.write(" <br>");
 	document.write("29. с помощью оператора while напишите программу вывода всех четных чисел в диапазоне от 2 до 100 включительно.");
@@ -462,7 +462,7 @@ function task29(){
 	}
 }
 
-	<!-- 30 -->
+<!-- 30 -->
 function task30(){
 	document.write(" <br>");
 	document.write("30. С помощью оператора while напишите программу определения суммы всех нечетных чисел в диапазоне от 1 до 99 включительно.");
@@ -478,7 +478,7 @@ function task30(){
 	document.write("sum = " + sum);
 }
 
-	<!-- 31 -->
+<!-- 31 -->
 function task31(){
 	document.write(" <br>");
 	document.write("31. Имеется кусок ткани длинной M метров.<br>");
@@ -486,7 +486,7 @@ function task31(){
 	var material = parseInt(prompt("enter length of material"));
 	var piece = parseInt(prompt("enter length of piece"));
 	material = material - piece;
-	while (material > 0) {
+	while (material > 0){
 	document.write( i + " piece of material x " + piece + "meters" + "<br>");
 	if (material < piece) {
 		document.write("too little of material for next piece" + "<br>");
@@ -496,8 +496,83 @@ function task31(){
 	}
 	document.write("rest : " + (material + piece) + "m");
 }
-	<!-- php4 -->
-function php4 () {
+<!-- php1 -->
+function php1(){
+	document.write(" <br>");
+	document.write("php1.Створити скрипт який вираховує чи наступні роки є високосними: 1954, 1900, 240, 246, 1488, 1802.<br>");
+	var array = [1954, 1900, 240, 246, 1488, 1802];
+	for(var i = 0; i < array.length;i++){
+		if(array[i] % 4 == 0 && array[i] % 100 != 0 ){
+			document.write(array[i] + "<br>");
+		}
+	}
+}
+<!-- php2 -->
+function php2(){
+	document.write(" <br>");
+	document.write("php2.Створити скрипт який рахує статистику входження кожного символа в даний текст<br>");
+	var sum = 0;
+	var text = "This piqued me, so, loading the express with solid ball, I waited till my friend walked some ten 	yards out from his force, in order to get a better view of our position, accompanied only by an orderly; then, lying down and resting the express on a rock, I covered him. The rifle, like all expresses, was only sighted to three hundred and fifty yards, so to allow for the drop in trajectory I took him half-way down the neck, which ought, I calculated, to find him in the chest. He stood quite still and gave me every opportunity, but whether it was the excitement or the wind, or the fact of the man being a long shot, I don't know, but this was what happened. Getting dead on, as I thought, a fine sight, I pressed, and when the puff of smoke had cleared away, to my disgust, I saw my man standing there unharmed, whilst his orderly, who was at least three paces to the left, was stretched upon the ground apparently dead. Turning swiftly, the officer I had aimed at began to run towards his men in evident alarm.	";
+	var array = text.split("");
+	var symbol = prompt("enter the symbol you wonna find");
+	for(var i = 0;i<array.length;i++){
+		if(array[i] == symbol){
+			sum++;
+		}
+	}
+	document.write("<br>" + sum + "<br>");
+}
+<!-- php3 -->
+function php3(){
+	document.write(" <br>");
+	document.write("php3.Створити скрип який сортує масиви трьома різними способами(1 спосіб/масив):<br>");
+	//bubble sort
+	var array1 = ['a', 'cold', 'water', 'McClane'];
+	for (var i = 0; i < array1.length; i++) {
+		for (var j = 0;j < array1.length; j++){
+			if (array1[j] > array1[j + 1]){
+				var c = array1[j];
+				array1[j] = array1[j + 1];
+				array1[j + 1] = c;
+			}
+		}
+		}   
+		document.write(array1 + "<br>");
+	//selection sort
+		var array2 = [1, 1.25, 33., 7];
+		for (var i = 0; i < array2.length; i++){
+			var min = i;
+			for (var j = i+1; j < array2.length; j++){
+				if (array2[j] < array2[min]){ 
+					min = j; 
+				}
+			} 
+			var c = array2[min]; 
+			array2[min] = array2[ i ]; 
+			array2[ i ] = c;
+		}                    
+		document.write(array2 + "<br>");
+	//gnome sort
+		var array3 = ['a', '5', 22.5, 'good', true];
+		var j = 2;
+		for (var i = 1;i < array3.length;i--){
+			if (array3[i-1] < array3[ i ]){
+				i = j; 
+				j++; 
+			}
+			else{ 
+			 var c = array3[i-1]; 
+			 array3[i-1] = array3[ i ];
+			 array3[ i ] = c;
+			if (i == 0){
+				i = j; j++; 
+			}
+			 }
+		}
+		 document.write(array3);
+}
+<!-- php4 -->
+function php4 (){
 			document.write(" <br>");
 			document.write("php4.Створити новий масив зі старого де після кожного від`ємного елемента вставити NULL.<br>");
 			var array = [-7, 0, 11, 5, -4, -4, 0, 12, -8];
@@ -512,18 +587,89 @@ function php4 () {
 			document.write("old array : " + array + "<br>");
 			document.write("new array : " + array2 + "<br>");
 		}
-	<!-- php7 -->		
-function php7() {
-			document.write(" <br>");
-			document.write("php7.Створити скрипт який порахує ваш середній бал за попередні курси в академії <br>");
-			var array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];
-			var sum = 0;
-			for (var i = 0; i < array.length; i++) {				
-				sum += array[i];
-			}
-			document.write("average mark : " + (sum / array.length));
+<!-- php5 -->
+function php5(){
+	document.write(" <br>");
+	document.write("php5.Створити скрипт який порахує скільки разів починаючи з 1112, людство проживало 29 лютого.<br>");
+	var sum = 0;
+	for (var i = 1112; i <= 2016; i++){
+		if (((i % 4 ==0) && (i % 100 !== 0) ) || (i % 400 ==0)){
+			sum++;
+		}
+	}
+	document.write(sum);
 }
-<!-- php9 -->		
+<!-- php6 -->
+function php6(){
+	document.write(" <br>");
+	document.write("php6.написати скрипт, який визначить колір світлофору через 2 роки після початку роботи світлофора(ввімкнули світлофор на червоний)<br>");
+	var year = 3600 * 24 * 365;
+	var color = 1;
+	for (var i = 0; i < (year * 2); i+= 40){
+		if (color > 3){
+			color = 1;
+		}
+	}
+	if(color == 1){
+		document.write("red");
+	}
+	else if(color == 1){
+		document.write("yellow");
+	}
+	else{
+		document.write("green");
+	}
+}
+<!-- php7 -->		
+function php7() {
+	document.write(" <br>");
+	document.write("php7.Створити скрипт який порахує ваш середній бал за попередні курси в академії <br>");
+	var array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];
+	var sum = 0;
+	for (var i = 0; i < array.length; i++){
+		sum += array[i];
+	}
+	document.write("average mark : " + (sum / array.length));
+}
+<!-- php8 -->
+function php8(){
+	document.write(" <br>");
+	document.write("php8.Створити скрипт, який заповнить рандомними числами від -100 до 100 масив розміром 100 елементів.<br>");
+	var positive = 0;
+	var negative = 0;
+	var zero = 0;
+	var rand;
+	var marker;
+	var array = [];
+	for(var i = 0; i < 100; i++){
+		marker = Math.random();
+		if(marker > 0.6){
+			rand = Math.round(Math.random() * 100);
+			array.push(rand);
+		}
+		else if(marker > 0.5 && marker < 0.6){
+			rand = Math.round(Math.random() * 0);
+			array.push(rand);
+		}
+		else{
+			rand = Math.round(Math.random() * -100);
+			array.push(rand);
+		}
+		
+		if (rand > 0) {
+			positive++;
+		} 
+		else if (rand = 0) {
+			zero++;
+		} 
+		else {
+			negative++;
+		}
+	}
+	document.write("positive numbers : " + positive + "<br>" + "zeroes :" + zero + "<br>" + "negative numbers :" + negative);
+}
+
+<!-- php9 -->
 function php9() {
 	document.write(" <br>");
 	document.write("php9.Створити скрипт, який розбирає даний масив на нові в яких будуть тільки однорідні типи<br>");			
@@ -544,6 +690,27 @@ function php9() {
 	document.write("array of numbers : " + arrayNum + "<br>");
 	document.write(" array of booleans : " + arrayBool + "<br>");
 	document.write(" array ormstrings : " + arrayStr + "<br>");
+}
+<!-- php10 -->
+function php10(){
+	document.write(" <br>");
+	document.write("php9.Створити скрипт, який порахує кількість учасників роду від 1720 і до сьогодні<br>");	
+	var family = 16;
+	for(var i = 0; i <= 2016; i++){
+		if (i % 5 == 0){
+			family += 5;
+		}
+		else if (i % 3 == 0){
+			family += 4;
+		}
+		else if (i % 2 == 0){
+			family += 3;
+		}
+		else {
+			family += 1;
+		}
+	}
+	document.write("family has " + family + " peoples");
 }
 	</script>
 
